tests/ui/wf/wf-dyn-incompat-trait-obj-match.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/wf-dyn-incompat-trait-obj-match.rs:23:17
   |
LL | /     match opt() {
LL | |         Some(()) => &S,
   | |                     -- this is found to be of type `&S`
LL | |         None => &R,
   | |                 ^^ expected `&S`, found `&R`
LL | |     }
   | |_____- `match` arms have incompatible types
   |
   = note: expected reference `&S`
              found reference `&R`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-dyn-incompat-trait-obj-match.rs:26:21
   |
LL |         Some(()) => &S,
   |                     ^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-dyn-incompat-trait-obj-match.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: the following types implement `Trait`:
             S
             R
           consider defining an enum where each variant holds one of these types,
           implementing `Trait` for this new enum and using it instead
   = note: required for the cast from `&S` to `&dyn Trait`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-dyn-incompat-trait-obj-match.rs:27:17
   |
LL |         None => &R,
   |                 ^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-dyn-incompat-trait-obj-match.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: the following types implement `Trait`:
             S
             R
           consider defining an enum where each variant holds one of these types,
           implementing `Trait` for this new enum and using it instead
   = note: required for the cast from `&R` to `&dyn Trait`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0308.
For more information about an error, try `rustc --explain E0038`.
